Fix characters overflowing the message bubble

--- a/src/styles/sidebar/_messages.scss
+++ b/src/styles/sidebar/_messages.scss
@@ -322,6 +322,7 @@
 			max-width: 70%;
 			white-space: pre-wrap;
 			position: relative;
+			overflow-wrap: break-word;
 		}
 	}
 }
